fix: proper return of produto + qnt
